<?xml version="1.0"?>
<package format="3">
    <name>plotjuggler_zenoh</name>
    <version>0.1.0</version>
    <description>PlotJuggler Zenoh plugin</description>

    <maintainer email="jafar.uruc@gmail.com">Jafar Uruc</maintainer>
    <license>BSD</license>

    <url type="website">https://github.com/JafarAbdi/plotjuggler-zenoh</url>

    <author email="jafar.uruc@gmail.com">Jafar Uruc</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>plotjuggler</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
